- 완료 표시(체크마크) 기능 추가

--- a/TodoTalk/TodoTalk/MyTalkCell.xib
+++ b/TodoTalk/TodoTalk/MyTalkCell.xib
@@ -18,19 +18,31 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" alignment="bottom" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="c1V-2I-GiI">
-                        <rect key="frame" x="40" y="1" width="376" height="163"/>
+                        <rect key="frame" x="55.5" y="1" width="360.5" height="163"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="752" text="2022.01.01" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dCM-3q-BOR">
-                                <rect key="frame" x="0.0" y="149.5" width="57" height="13.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="bottom" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="Alq-eO-Tx9">
+                                <rect key="frame" x="0.0" y="124.5" width="57" height="38.5"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="checkmark.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Xm9-0Y-oDE">
+                                        <rect key="frame" x="37" y="0.5" width="20" height="19"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="20" id="E5s-ex-Y6l"/>
+                                            <constraint firstAttribute="width" constant="20" id="dtg-Jz-goa"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="752" text="2022.01.01" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dCM-3q-BOR">
+                                        <rect key="frame" x="0.0" y="25" width="57" height="13.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DYI-WM-Y3T">
-                                <rect key="frame" x="67" y="0.0" width="309" height="163"/>
+                                <rect key="frame" x="67" y="0.0" width="293.5" height="163"/>
                                 <subviews>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" horizontalHuggingPriority="251" scrollEnabled="NO" editable="NO" text="sdasd asd sad sad sad sad asd asdasd as das d asd asd asd asdsa asd sad asd asd asd sadasd sa" translatesAutoresizingMaskIntoConstraints="NO" id="8wP-EO-G2G">
-                                        <rect key="frame" x="5" y="5" width="299" height="153"/>
+                                        <rect key="frame" x="5" y="5" width="283.5" height="153"/>
                                         <constraints>
                                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="15" id="azw-7g-Qdu"/>
                                         </constraints>
@@ -68,12 +80,14 @@
                 <outlet property="bottomSpace" destination="KQg-kU-06H" id="YqF-ri-cx3"/>
                 <outlet property="contentTextView" destination="8wP-EO-G2G" id="HTb-NR-tTy"/>
                 <outlet property="dateLabel" destination="dCM-3q-BOR" id="csE-Ft-wmJ"/>
+                <outlet property="isFinishedMark" destination="Xm9-0Y-oDE" id="qb7-Nd-81M"/>
                 <outlet property="topSpace" destination="sX2-Nj-0x4" id="Ra6-eK-BkW"/>
             </connections>
             <point key="canvasLocation" x="208.69565217391306" y="41.852678571428569"/>
         </tableViewCell>
     </objects>
     <resources>
+        <image name="checkmark.circle.fill" catalog="system" width="128" height="121"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
